# incometax-agent

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pyproject.toml  turbo.json
apps/backend/: pyproject.toml
apps/backend/src/itx_backend/: config.py  main.py
apps/backend/src/itx_backend/agent/: checkpointer.py  graph.py  llm_client.py  runner.py  state.py  tool_registry.py
apps/backend/src/itx_backend/api/: __init__.py  actions.py  analytics.py  auth.py  autopilot.py  ca_workspace.py  chat.py  documents.py  drift.py  exports.py  filing.py  replay.py  security.py  tax_facts.py  threads.py  websocket.py
apps/backend/src/itx_backend/db/: session.py
apps/backend/src/itx_backend/security/: anomaly.py  crypto.py  pii.py  quarantine.py  rate_limit.py  request_auth.py
apps/backend/src/itx_backend/services/: action_runtime.py  ai_gateway.py  analytics.py  audit.py  auth_runtime.py  chat.py  cohere_client.py  consent.py  doc_client.py  document_storage.py  documents.py  embedding_service.py  filing_runtime.py  hybrid_retriever.py  itr_u_service.py  minio_storage.py  official_artifacts.py  offline_export.py  portal_context.py  portal_drift_autopilot.py  post_filing.py  qdrant_client.py  regime_advisor.py  replay_harness.py  retention.py  review_workspace.py  rules_client.py  runtime_cache.py  startup_health.py  tavily_client.py  validation_help.py  (+1 more)
apps/backend/tests/: __init__.py
apps/backend/tests/agent/: __init__.py  test_agent_eval.py  test_checkpointer.py
apps/backend/tests/api/: __init__.py  test_actions.py  test_analytics.py  test_documents.py  test_documents_password.py  test_filing.py  test_replay.py  test_review_workspace.py  test_reviewer_workflow.py  test_startup_health.py  test_threads.py
apps/workers/: pyproject.toml
apps/workers/src/itx_workers/: dev_runner.py  document_pipeline.py  queue.py
apps/workers/tests/: test_document_pipeline.py  test_parser_scorecard.py  test_password_protected.py
(+204 files in other folders)
