[tool.poetry]
name = "itx-backend"
version = "0.1.0"
description = "Backend for IncomeTax Agent"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
websockets = "^13.1"
langgraph = "*"
asyncpg = "^0.30.0"
pydantic = "^2.0.0"
opentelemetry-sdk = "*"
opentelemetry-api = "*"
opentelemetry-exporter-otlp-proto-http = "*"
redis = "^5.2.0"
minio = "^7.2.0"
pypdf = "^5.0.0"
PyMuPDF = "^1.24.0"
pillow = "^11.0.0"
anthropic = "^0.39.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
